[gd_scene load_steps=10 format=3 uid="uid://hi6m0qairww8"]

[ext_resource type="FontFile" uid="uid://53mc8y7oxube" path="res://fonts/november/novem___.ttf" id="1_dessg"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_iy0qy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b12gw"]
bg_color = Color(0.788235, 0.788235, 0.788235, 0.560784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omloc"]
bg_color = Color(1, 0.839216, 0.662745, 0.603922)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0enyy"]
bg_color = Color(0.788235, 0.788235, 0.788235, 0.788235)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4n2bh"]
bg_color = Color(0.788235, 0.788235, 0.788235, 0.788235)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88o5i"]
bg_color = Color(0.788235, 0.788235, 0.788235, 0.788235)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q31lo"]
bg_color = Color(1, 0.839216, 0.662745, 0.603922)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xntvm"]
content_margin_left = 5.0
content_margin_top = 10.0
bg_color = Color(0.788235, 0.788235, 0.788235, 0.788235)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iy0qy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -250.0
offset_right = 430.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b12gw")

[node name="ButtonPanel" type="Panel" parent="CanvasLayer/Panel"]
offset_left = 50.0
offset_top = 30.0
offset_right = 310.0
offset_bottom = 350.0
theme_override_styles/panel = SubResource("StyleBoxFlat_omloc")

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Panel/ButtonPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 240.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Play"

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Panel/ButtonPanel"]
offset_left = 20.0
offset_top = 210.0
offset_right = 240.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_4n2bh")
text = "Quit"

[node name="ButtonRestart" type="Button" parent="CanvasLayer/Panel/ButtonPanel"]
offset_left = 20.0
offset_top = 130.0
offset_right = 240.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_88o5i")
text = "Restart"

[node name="ShopPanel" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -220.0
offset_right = -50.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q31lo")

[node name="Btn_1_Bullets" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 20.0
offset_right = 430.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Btn_4_Speed_boost" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 164.0
offset_right = 430.0
offset_bottom = 204.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Btn_3_Overall_Speed" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 116.0
offset_right = 430.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Btn_6_Fire_boost" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 260.0
offset_right = 430.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Btn_5_Bullet_damage" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 212.0
offset_right = 430.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Btn_2_Health" type="Button" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 350.0
offset_top = 68.0
offset_right = 430.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_0enyy")
text = "Buy"

[node name="Label" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "1  -  Bullets"
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 30.0
offset_top = 68.0
offset_right = 280.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "5  -  Health"
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 30.0
offset_top = 212.0
offset_right = 280.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "5  -  Bullet damage"
vertical_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 30.0
offset_top = 260.0
offset_right = 280.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "5  -  Fire boost"
vertical_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 30.0
offset_top = 116.0
offset_right = 280.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "5  -  Overall speed"
vertical_alignment = 1

[node name="Label6" type="Label" parent="CanvasLayer/Panel/ShopPanel"]
offset_left = 30.0
offset_top = 164.0
offset_right = 280.0
offset_bottom = 204.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 25
text = "5  -  Speed boost"
vertical_alignment = 1

[node name="amountText" type="TextEdit" parent="CanvasLayer/Panel/ShopPanel"]
layout_mode = 0
offset_left = 265.0
offset_top = 22.0
offset_right = 337.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xntvm")
placeholder_text = "amount"

[node name="StoryPanel" type="Panel" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -380.0
offset_top = -120.0
offset_right = 380.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_q31lo")

[node name="Label" type="Label" parent="CanvasLayer/Panel/StoryPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dessg")
theme_override_font_sizes/font_size = 30
text = "Fight your way from the Underworld!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToGameTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="button_down" from="CanvasLayer/Panel/ButtonPanel/ButtonPlay" to="." method="_on_button_play_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ButtonPanel/ButtonQuit" to="." method="_on_button_quit_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ButtonPanel/ButtonRestart" to="." method="_on_button_restart_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_1_Bullets" to="." method="_on_btn_1_bullets_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_4_Speed_boost" to="." method="_on_btn_4_speed_boost_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_3_Overall_Speed" to="." method="_on_btn_3_overall_speed_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_6_Fire_boost" to="." method="_on_btn_6_fire_boost_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_5_Bullet_damage" to="." method="_on_btn_5_bullet_damage_button_down"]
[connection signal="button_down" from="CanvasLayer/Panel/ShopPanel/Btn_2_Health" to="." method="_on_btn_2_health_button_down"]
[connection signal="timeout" from="ToGameTimer" to="." method="_on_to_game_timer_timeout"]
